Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
@@ -96,12 +96,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:63
 msgid "In Quarkus, you can simply inject the template definition. The template is automatically parsed and cached - see <<quarkus_integration>>."
-msgstr ""
+msgstr "Quarkusでは、テンプレートの定義を単純に注入することができます。テンプレートは自動的に解析され、キャッシュされます - link:#quarkus_integration[quarkus_integration] を参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:65
 msgid "Finally, we will create a *template instance*, set the data and render the output:"
-msgstr ""
+msgstr "最後に *テンプレートインスタンス* を作成し、データをセットして出力をレンダリングします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:70
@@ -233,12 +233,12 @@ msgstr "識別子は、式やセクションタグで使用されます。有効
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:123
 msgid "You can use bracket notation if you need to specify an identifier that contains a dot, e.g. `{map['my.key']}`."
-msgstr ""
+msgstr "ドットを含む識別子を指定する必要がある場合は、大括弧表記を使用することができます。例：`{map['my.key']}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:127
 msgid "When parsing a template document the parser identifies all _tags_.  A tag starts and ends with a curly bracket, e.g. `{foo}`.  The content of a tag must start with:"
-msgstr ""
+msgstr "テンプレート文書を解析する際、パーサはすべての _タグ_ を識別します。タグは中括弧で始まり、中括弧で終わります。例: `{foo}` タグの内容は次から始まる必要があります:"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:129
@@ -258,18 +258,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:132
 msgid "a built-in command: `#`, `!`, `@`, `/`."
-msgstr ""
+msgstr "組み込みコマンド: `#` , `!` , `@` , `/` ."
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:134
 msgid "If it does not start with any of the above it is ignored by the parser."
-msgstr ""
+msgstr "上記のいずれかで始まらない場合は、パーサによって無視されます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:135
 #, no-wrap
 msgid "Tag Examples"
-msgstr ""
+msgstr "タグの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:147
@@ -289,49 +289,49 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:149
 msgid "Parsed: an expression that starts with underscore."
-msgstr ""
+msgstr "パース対象: アンダースコアで始まる式"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:150
 msgid "Parsed: a comment"
-msgstr ""
+msgstr "パース対象: コメント"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:151
 msgid "Ignored: starts with whitespace."
-msgstr ""
+msgstr "無視対象: 空白で開始"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:152
 msgid "Ignored: starts with `{`."
-msgstr ""
+msgstr "無視対象: `{` で開始"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:153
 msgid "Ignored: starts with `\"`."
-msgstr ""
+msgstr "無視対象: `\"` で開始"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:155
 msgid "It is also possible to use escape sequences `\\{` and `\\}` to insert delimiters in the text. In fact, an escape sequence is usually only needed for the start delimiter, ie. `\\\\{foo}` will be rendered as `{foo}` (no parsing/evaluation will happen)."
-msgstr ""
+msgstr "エスケープシーケンス `\\{` や `\\}` を使ってテキストにデリミタを挿入することも可能です。 実際には、エスケープシーケンスは通常、開始デリミタのためにのみ必要とされます。すなわち、`\\\\{foo}`は `{foo}` として描画されます（パース、評価は行われません）。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/qute-reference.adoc:156
 #, no-wrap
 msgid "Removing Standalone Lines From the Template"
-msgstr ""
+msgstr "テンプレートから独立した行を削除する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:162
 msgid "By default, the parser removes standalone lines from the template output.  A *standalone line* is a line that contains at least one section tag (e.g. `{#each}` and `{/each}`), parameter declaration (e.g. `{@org.acme.Foo foo}`) or comment but no expression and no non-whitespace character.  In other words, a line that contains no section tag or a parameter declaration is *not* a standalone line.  Likewise, a line that contains an _expression_ or a _non-whitespace character_ is *not* a standalone line."
-msgstr ""
+msgstr "デフォルトでは、パーサはテンプレート出力からスタンドアロン行を削除します。スタンドアロン *行* とは、少なくとも1つのセクションタグ(例: `{#each}` や `{/each}` )、パラメーター宣言(例: `{@org.acme.Foo foo}` )、コメントを含むが、式を含まず、空白以外の文字を含まない行のことです。言い換えれば、セクションタグやパラメーター宣言を含まない行は、独立した行ではあり *ません* 。同様に、 _式_ や _空白以外の文字_ を含む行もスタンドアロン行ではあり *ません* 。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:163
 #, no-wrap
 msgid "Template Example"
-msgstr ""
+msgstr "テンプレート例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:176
@@ -352,28 +352,28 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:178
 msgid "This is a standalone line and will be removed."
-msgstr ""
+msgstr "これはスタンドアロン行なので削除されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:179
 msgid "Not a standalone line - contains an expression and non-whitespace characters"
-msgstr ""
+msgstr "スタンドアロン行ではない - 式と非空白文字を含む"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:180
 msgid "Not a standalone line - contains no section tag/parameter declaration"
-msgstr ""
+msgstr "スタンドアロン行ではない - セクションタグ/パラメーター宣言を含まない"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:181
 msgid "This is a standalone line."
-msgstr ""
+msgstr "これはスタンドアロン行です。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:182
 #, no-wrap
 msgid "Default Output"
-msgstr ""
+msgstr "デフォルト出力"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:189
@@ -398,13 +398,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:197
 msgid "In Quarkus, the default behavior can be disabled by setting the property `quarkus.qute.remove-standalone-lines` to `false`.  In this case, all whitespace characters from a standalone line will be printed to the output."
-msgstr ""
+msgstr "Quarkusでは、プロパティー( `quarkus.qute.remove-standalone-lines` )を `false` に設定することで、デフォルトの動作を無効にすることができます。この場合、スタンドアロン行のすべての空白文字が出力されます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:198
 #, no-wrap
 msgid "Output with `quarkus.qute.remove-standalone-lines=false`"
-msgstr ""
+msgstr "`quarkus.qute.remove-standalone-lines=false` での出力"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:204
@@ -424,7 +424,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:221
 msgid "An expression outputs a value.  It consists of one or more parts separated by dot (dot notation) or square brackets (bracket notation).  In the `object.property` (dot notation) syntax, the `property` must be a <<identifiers,valid identifier>>.  In the `object[property_name]` (bracket notation) syntax, the `property_name` has to be a non-null <<literals, literal>> value.  An expression could start with an optional namespace followed by a colon (`:`)."
-msgstr ""
+msgstr "式は値を出力します。これは、ドット(ドット表記)または角括弧(カッコ表記)で区切られた1つ以上の部分から構成されています。 `object.property` (ドット表記) 構文では、 `property` は link:#identifiers[有効な識別子] である必要があります。 `object[property_name]` (括弧表記) 構文では、 `property_name` は非 null link:#literals[リテラル] 値である必要があります。式は、コロン ( `:` )が後ろについた名前空間で始まることができます（オプション）。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:222
@@ -450,17 +450,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:232
 msgid "no namespace, two parts: `item`, `name`"
-msgstr ""
+msgstr "名前空間なし、2つの部分: `item` . `name`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:233
 msgid "equivalent to `{item.name}` but using the bracket notation"
-msgstr ""
+msgstr "`{item.name}` と同等ですが、括弧表記を使用しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:234
 msgid "namespace `global`, one part: `colors`"
-msgstr ""
+msgstr "namespace `global` , 1つの部分: `colors`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:238
@@ -716,7 +716,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:688
 #, no-wrap
 msgid "Operator"
-msgstr ""
+msgstr "オペレーター"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:350
@@ -1107,7 +1107,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:523
 msgid "The output will be:"
-msgstr ""
+msgstr "出力は"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:527
@@ -1145,7 +1145,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:688
 #, no-wrap
 msgid "Aliases"
-msgstr ""
+msgstr "エイリアス"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:548
@@ -1157,7 +1157,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:549
 #, no-wrap
 msgid "logical complement"
-msgstr ""
+msgstr "logical complement"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:550
@@ -1176,7 +1176,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:695
 #, no-wrap
 msgid "greater than"
-msgstr ""
+msgstr "greater than"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:554
@@ -1199,7 +1199,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:699
 #, no-wrap
 msgid "greater than or equal to"
-msgstr ""
+msgstr "greater than or equal to"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:558
@@ -1213,7 +1213,7 @@ msgstr "`ge`, `>=`"
 #: upstream/_versions/1.11/guides/qute-reference.adoc:703
 #, no-wrap
 msgid "less than"
-msgstr ""
+msgstr "less than"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:562
@@ -1227,7 +1227,7 @@ msgstr "`lt`, `<`"
 #: upstream/_versions/1.11/guides/qute-reference.adoc:707
 #, no-wrap
 msgid "less than or equal to"
-msgstr ""
+msgstr "less than or equal to"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:566
@@ -1240,7 +1240,7 @@ msgstr "`le`, `\\<=`"
 #: upstream/_versions/1.11/guides/qute-reference.adoc:569
 #, no-wrap
 msgid "equals"
-msgstr ""
+msgstr "equals"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:570
@@ -1259,7 +1259,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:573
 #, no-wrap
 msgid "not equals"
-msgstr ""
+msgstr "not equals"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:574
@@ -1271,7 +1271,7 @@ msgstr "`ne`, `!=`"
 #: upstream/_versions/1.11/guides/qute-reference.adoc:577
 #, no-wrap
 msgid "logical AND (short-circuiting)"
-msgstr ""
+msgstr "logical AND (short-circuiting)"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:578
@@ -1290,7 +1290,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:581
 #, no-wrap
 msgid "logical OR (short-circuiting)"
-msgstr ""
+msgstr "logical OR (short-circuiting)"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:581
@@ -1308,7 +1308,7 @@ msgstr "`, `or`"
 #: upstream/_versions/1.11/guides/qute-reference.adoc:586
 #, no-wrap
 msgid "A simple operator example"
-msgstr ""
+msgstr "簡単な演算子の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:592
@@ -1322,13 +1322,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:595
 msgid "Multiple conditions are also supported."
-msgstr ""
+msgstr "複数の条件にも対応しています。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:596
 #, no-wrap
 msgid "Multiple conditions example"
-msgstr ""
+msgstr "複数条件の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:602
@@ -1342,13 +1342,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:605
 msgid "Precedence rules can be overridden by parentheses."
-msgstr ""
+msgstr "優先順位の規則は、カッコで上書きすることができます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:606
 #, no-wrap
 msgid "Parentheses example"
-msgstr ""
+msgstr "括弧の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:612
@@ -1362,7 +1362,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:616
 msgid "You can also add any number of `else` blocks:"
-msgstr ""
+msgstr "また、 `else` ブロックを何個でも追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:628
@@ -1388,13 +1388,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:637
 msgid "This section is similar to Java's `switch` or Kotlin's `when` constructs.  It matches a _tested value_ against all blocks sequentially until a condition is satisfied.  The first matching block is executed.  All other blocks are ignored (this behavior differs to the Java `switch` where a `break` statement is necessary)."
-msgstr ""
+msgstr "このセクションは、Java の `switch` や Kotlin の `when` に似ています。条件が満たされるまで、 _テストされた値_ をすべてのブロックに対して順次マッチさせます。最初にマッチしたブロックが実行されます。他のすべてのブロックは無視されます(この動作は、 `break` 文が必要な Java `switch` とは異なります)。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:638
 #, no-wrap
 msgid "Example using the `when`/`is` name aliases"
-msgstr ""
+msgstr "`when` / `is` の名前のエイリアスを使用した例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:649
@@ -1423,7 +1423,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:653
 msgid "`else` is block is executed if no other block matches the value."
-msgstr ""
+msgstr "`else` は、他のブロックが値に一致しない場合に実行されます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:654
@@ -1446,7 +1446,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:665
 msgid "`case` is an alias for `is`."
-msgstr ""
+msgstr "`case` は `is` の別名です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:668
@@ -1468,12 +1468,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:679
 msgid "This block is executed if `machine.status.toString().equals(\"ON\")`."
-msgstr ""
+msgstr "このブロックは `machine.status.toString().equals(\"ON\")` の場合に実行されます"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:680
 msgid "This block is executed if `machine.status.toString().equals(\"OFF\")` or `machine.status.toString().equals(\"BROKEN\")`."
-msgstr ""
+msgstr "このブロックは、 `machine.status.toString().equals(\"OFF\")` または `machine.status.toString().equals(\"BROKEN\")` の場合に実行されます"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:682
@@ -2539,7 +2539,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1215
 #, no-wrap
 msgid "Method Parameters"
-msgstr ""
+msgstr "メソッドパラメーター"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1220
@@ -2550,7 +2550,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1221
 #, no-wrap
 msgid "Multiple Parameters Example"
-msgstr ""
+msgstr "複数のパラメーターの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1226
@@ -2657,7 +2657,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1273
 #, no-wrap
 msgid "Built-in Template Extension"
-msgstr ""
+msgstr "組み込みテンプレートエクステンション"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1276
