--- a/l10n/po/ja_JP/_versions/1.7/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/cdi-reference.adoc.po
@@ -2184,7 +2184,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1026
 msgid "`Map<DotName, ClassInfo>` containing all qualifiers"
-msgstr ""
+msgstr "`Map<DotName, ClassInfo>` すべての修飾子を含む"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1027
