--- a/l10n/po/ja_JP/_versions/1.7/guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/mailer.adoc.po
@@ -214,7 +214,7 @@ msgstr "`io.quarkus.mailer.Mailer` は、命令型 (ブロッキングと同期)
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:114
 msgid "`io.quarkus.mailer.reactive.ReactiveMailer` provides the reactive (non-blocking and asynchronous) API"
-msgstr ""
+msgstr "`io.quarkus.mailer.reactive.ReactiveMailer` はリアクティブ型 (ノンブロッキングで非同期の) API を提供しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:116
@@ -616,6 +616,13 @@ msgid ""
 "quarkus.mailer.username=YOUREMAIL@gmail.com\n"
 "quarkus.mailer.password=YOURGENERATEDAPPLICATIONPASSWORD\n"
 msgstr ""
+"quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN\n"
+"quarkus.mailer.from=YOUREMAIL@gmail.com\n"
+"quarkus.mailer.host=smtp.gmail.com\n"
+"quarkus.mailer.port=587\n"
+"quarkus.mailer.start-tls=REQUIRED\n"
+"quarkus.mailer.username=YOUREMAIL@gmail.com\n"
+"quarkus.mailer.password=YOURGENERATEDAPPLICATIONPASSWORD\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:355
@@ -625,7 +632,7 @@ msgstr "SSLを利用する場合"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:365
 msgid "  quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN quarkus.mailer.from=YOUREMAIL@gmail.com quarkus.mailer.host=smtp.gmail.com quarkus.mailer.port=465 quarkus.mailer.ssl=true quarkus.mailer.username=YOUREMAIL@gmail.com quarkus.mailer.password=YOURGENERATEDAPPLICATIONPASSWORD"
-msgstr ""
+msgstr "  quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN quarkus.mailer.from=YOUREMAIL@gmail.com quarkus.mailer.host=smtp.gmail.com quarkus.mailer.port=465 quarkus.mailer.ssl=true quarkus.mailer.username=YOUREMAIL@gmail.com quarkus.mailer.password=YOURGENERATEDAPPLICATIONPASSWORD"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:372
@@ -668,7 +675,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:386
 msgid "@Inject MailClient client;"
-msgstr ""
+msgstr "@Inject MailClient client;"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:389
