--- a/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
@@ -92,12 +92,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:55
 msgid "In Quarkus, you can simply inject the template definition. The template is automatically parsed and cached - see <<quarkus_integration>>."
-msgstr ""
+msgstr "Quarkusでは、テンプレートの定義を単純に注入することができます。テンプレートは自動的に解析され、キャッシュされます - link:#quarkus_integration[quarkus_integration] を参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:57
 msgid "Finally, we will create a *template instance*, set the data and render the output:"
-msgstr ""
+msgstr "最後に *テンプレートインスタンス* を作成し、データをセットして出力をレンダリングします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:62
@@ -321,7 +321,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:127
 #, no-wrap
 msgid "Removing Standalone Lines From the Template"
-msgstr ""
+msgstr "テンプレートから独立した行を削除する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:133
@@ -332,7 +332,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:134
 #, no-wrap
 msgid "Template Example"
-msgstr ""
+msgstr "テンプレート例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:147
@@ -353,28 +353,28 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:149
 msgid "This is a standalone line and will be removed."
-msgstr ""
+msgstr "これはスタンドアロン行なので削除されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:150
 msgid "Not a standalone line - contains an expression and non-whitespace characters"
-msgstr ""
+msgstr "スタンドアロン行ではない - 式と非空白文字を含む"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:151
 msgid "Not a standalone line - contains no section tag/parameter declaration"
-msgstr ""
+msgstr "スタンドアロン行ではない - セクションタグ/パラメーター宣言を含まない"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:152
 msgid "This is a standalone line."
-msgstr ""
+msgstr "これはスタンドアロン行です。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/qute-reference.adoc:153
 #, no-wrap
 msgid "Default Output"
-msgstr ""
+msgstr "デフォルト出力"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:160
@@ -405,7 +405,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:169
 #, no-wrap
 msgid "Output with `quarkus.qute.remove-standalone-lines=false`"
-msgstr ""
+msgstr "`quarkus.qute.remove-standalone-lines=false` での出力"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:175
@@ -457,17 +457,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:202
 msgid "no namespace, two parts: `item`, `name`"
-msgstr ""
+msgstr "名前空間なし、2つの部分: `item` . `name`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:203
 msgid "equivalent to `{item.name}` but using the bracket notation"
-msgstr ""
+msgstr "`{item.name}` と同等ですが、括弧表記を使用しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:204
 msgid "namespace `global`, one part: `colors`"
-msgstr ""
+msgstr "namespace `global` , 1つの部分: `colors`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:206
@@ -719,7 +719,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:492
 #, no-wrap
 msgid "Operator"
-msgstr ""
+msgstr "オペレーター"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:313
@@ -1026,7 +1026,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:469
 msgid "The output will be:"
-msgstr ""
+msgstr "出力は"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:473
@@ -1063,7 +1063,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:492
 #, no-wrap
 msgid "Aliases"
-msgstr ""
+msgstr "エイリアス"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:494
@@ -1075,7 +1075,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:495
 #, no-wrap
 msgid "logical complement"
-msgstr ""
+msgstr "logical complement"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:496
@@ -1093,7 +1093,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:499
 #, no-wrap
 msgid "greater than"
-msgstr ""
+msgstr "greater than"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:500
@@ -1114,7 +1114,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:503
 #, no-wrap
 msgid "greater than or equal to"
-msgstr ""
+msgstr "greater than or equal to"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:504
@@ -1126,7 +1126,7 @@ msgstr "`ge`, `>=`"
 #: upstream/_versions/1.7/guides/qute-reference.adoc:507
 #, no-wrap
 msgid "less than"
-msgstr ""
+msgstr "less than"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:508
@@ -1138,7 +1138,7 @@ msgstr "`lt`, `<`"
 #: upstream/_versions/1.7/guides/qute-reference.adoc:511
 #, no-wrap
 msgid "less than or equal to"
-msgstr ""
+msgstr "less than or equal to"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:512
@@ -1150,7 +1150,7 @@ msgstr "`le`, `\\<=`"
 #: upstream/_versions/1.7/guides/qute-reference.adoc:515
 #, no-wrap
 msgid "equals"
-msgstr ""
+msgstr "equals"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:516
@@ -1169,7 +1169,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:519
 #, no-wrap
 msgid "not equals"
-msgstr ""
+msgstr "not equals"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:520
@@ -1181,7 +1181,7 @@ msgstr "`ne`, `!=`"
 #: upstream/_versions/1.7/guides/qute-reference.adoc:523
 #, no-wrap
 msgid "logical AND (short-circuiting)"
-msgstr ""
+msgstr "logical AND (short-circuiting)"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:524
@@ -1200,7 +1200,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:527
 #, no-wrap
 msgid "logical OR (short-circuiting)"
-msgstr ""
+msgstr "logical OR (short-circuiting)"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:527
@@ -1224,7 +1224,7 @@ msgstr "`, `or`"
 #: upstream/_versions/1.7/guides/qute-reference.adoc:532
 #, no-wrap
 msgid "A simple operator example"
-msgstr ""
+msgstr "簡単な演算子の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:538
@@ -1238,13 +1238,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:541
 msgid "Multiple conditions are also supported."
-msgstr ""
+msgstr "複数の条件にも対応しています。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/qute-reference.adoc:542
 #, no-wrap
 msgid "Multiple conditions example"
-msgstr ""
+msgstr "複数条件の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:548
@@ -1258,13 +1258,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:551
 msgid "Precedence rules can be overridden by parentheses."
-msgstr ""
+msgstr "優先順位の規則は、カッコで上書きすることができます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/qute-reference.adoc:552
 #, no-wrap
 msgid "Parentheses example"
-msgstr ""
+msgstr "括弧の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:558
@@ -1278,7 +1278,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:562
 msgid "You can also add any number of `else` blocks:"
-msgstr ""
+msgstr "また、 `else` ブロックを何個でも追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:574
@@ -1951,7 +1951,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:907
 #, no-wrap
 msgid "Method Parameters"
-msgstr ""
+msgstr "メソッドパラメーター"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:912
@@ -1962,7 +1962,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:913
 #, no-wrap
 msgid "Multiple Parameters Example"
-msgstr ""
+msgstr "複数のパラメーターの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:918
@@ -2069,7 +2069,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:965
 #, no-wrap
 msgid "Built-in Template Extension"
-msgstr ""
+msgstr "組み込みテンプレートエクステンション"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:968
