--- a/l10n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-07 19:11+0000\n"
-"PO-Revision-Date: 2021-04-14 21:22+0900\n"
+"PO-Revision-Date: 2021-04-26 22:09+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -985,21 +985,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:517
-#, fuzzy
 msgid "Quarkus takes care of registering the `CodecProvider` for you."
-msgstr "Quarkusでは、 `CodecProvider` の登録を代行しています。"
+msgstr "Quarkusでは、 `CodecProvider` の登録を行います。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:519
-#, fuzzy
 msgid "Finally, when getting the `MongoCollection` from the database you can use directly the `Fruit` class instead of the `Document` one, the codec will automatically map the `Document` to/from your `Fruit` class."
 msgstr "最後に、データベースから `MongoCollection` を取得するとき、 `Document` の代わりに `Fruit` クラスを直接使用することができます。コーデックは自動的に `Document` を `Fruit` クラスにマッピングします。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:521
-#, fuzzy
 msgid "Here is an example of using a `MongoCollection` with the `FruitCodec`."
-msgstr "ここでは、 `MongoCollection` を `FruitCodec` ."
+msgstr "これが、 `MongoCollection` を `FruitCodec` と使用する例です。"
 
 #. type: delimited block -
 #: upstream/_guides/mongodb.adoc:529
@@ -1069,27 +1066,23 @@ msgstr "POJOコーデック"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:568
-#, fuzzy
 msgid "The link:http://mongodb.github.io/mongo-java-driver/3.12/bson/pojos[POJO Codec] provides a set of annotations that enable the customization of the way a POJO is mapped to a MongoDB collection and this codec is initialized automatically by Quarkus"
-msgstr "POJO link:http://mongodb.github.io/mongo-java-driver/3.12/bson/pojos[コーデック] は、POJOをMongoDBコレクションにマッピングする方法をカスタマイズできるアノテーションのセットを提供しています。"
+msgstr "link:http://mongodb.github.io/mongo-java-driver/3.12/bson/pojos[POJO Codec] は、POJOをMongoDBコレクションにマッピングする方法をカスタマイズできるアノテーションのセットを提供しています。このCodecはQuarkusによって自動的に初期化されます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:571
-#, fuzzy
 msgid "One of these annotations is the `@BsonDiscriminator` annotation that allows to storage multiple Java types in a single MongoDB collection by adding a discriminator field inside the document. It can be useful when working with abstract types or interfaces."
-msgstr "このアノテーションのひとつに `@BsonDiscriminator` アノテーションがありますが、これは、ドキュメントの中に判別フィールドを追加することで、複数の Java 型をひとつの MongoDB コレクションに保存できるようにするものです。抽象的な型やインターフェイスを扱うときに便利です。"
+msgstr "このアノテーションのひとつに `@BsonDiscriminator` アノテーションがありますが、これは、ドキュメントの中にデリミタフィールドを追加することで、複数の Java 型をひとつの MongoDB コレクションに保存できるようにするものです。抽象的な型やインターフェイスを扱うときに便利です。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:573
-#, fuzzy
 msgid "Quarkus will automatically register all the classes annotated with `@BsonDiscriminator` with the POJO codec."
 msgstr "Quarkusは、 `@BsonDiscriminator` でアノテーションされたすべてのクラスをPOJOコーデックで自動的に登録します。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:577
-#, fuzzy
 msgid "The POJO Codec have enhanced generic support via `PropertyCodecProvider`, Quarkus will automatically register any `PropertyCodecProvider` with the POJO Codec.  When building native executables and using generic types, you might need to register the type arguments for reflection."
-msgstr "POJOコーデックは、 `PropertyCodecProvider` を介して強化されたジェネリックサポートを持っています。Quarkusは、任意の `PropertyCodecProvider` をPOJOコーデックに自動的に登録します。ネイティブ実行可能ファイルをビルドしてジェネリック型を使用する場合、リフレクションのために型引数を登録する必要があるかもしれません。"
+msgstr "POJOコーデックは、 `PropertyCodecProvider` を介して強化されたジェネリックサポートを持っています。Quarkusは、任意の `PropertyCodecProvider` をPOJOコーデックで自動的に登録します。ネイティブ実行可能ファイルをビルドしてジェネリック型を使用する場合、リフレクションのために型引数を登録する必要があるかもしれません。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb.adoc:578
@@ -1110,21 +1103,18 @@ msgstr "接続のヘルスチェック"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:586
-#, fuzzy
 msgid "If you are using the `quarkus-smallrye-health` extension, `quarkus-mongodb-client` will automatically add a readiness health check to validate the connection to the cluster."
-msgstr "`quarkus-smallrye-health` エクステンションを使用している場合、 `quarkus-mongodb-client` はクラスターへの接続を検証するための準備状態の健康チェックを自動的に追加します。"
+msgstr "`quarkus-smallrye-health` エクステンションを使用している場合、 `quarkus-mongodb-client` はクラスターへの接続を検証するためのReadinessヘルスチェックを自動的に追加します。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:588
-#, fuzzy
 msgid "So when you access the `/q/health/ready` endpoint of your application you will have information about the connection validation status."
 msgstr "そのため、アプリケーションの `/q/health/ready` エンドポイントにアクセスすると、接続の検証状況に関する情報が表示されます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:590
-#, fuzzy
 msgid "This behavior can be disabled by setting the `quarkus.mongodb.health.enabled` property to `false` in your `application.properties`."
-msgstr "この動作は、 `application.properties` の `quarkus.mongodb.health.enabled` プロパティーを `false` に設定することで無効にできます。"
+msgstr "この動作は、 `application.properties` で `quarkus.mongodb.health.enabled` プロパティーを `false` に設定することで無効にできます。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb.adoc:591
@@ -1150,13 +1140,11 @@ msgstr "トレース"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:603
-#, fuzzy
 msgid "If you are using the `quarkus-smallrye-opentracing` extension, `quarkus-mongodb-client` can register traces about the commands executed.  This behavior must be enabled by setting the `quarkus.mongodb.tracing.enabled` property to `true` in your `application.properties` and adding the dependency `io.opentracing.contrib:opentracing-mongo-common` to your pom.xml (for more info read the link:opentracing#mongodb-client[OpenTracing - MongoDB client] section)."
-msgstr "`quarkus-micrometer` または `quarkus-smallrye-metrics` エクステンションを使用している場合、 `quarkus-mongodb-client` は接続プールに関するメトリクスを提供することができます。この動作を有効にするには、まず `application.properties` .NET Framework の `quarkus.mongodb.metrics.enabled` プロパティーを `true` に設定する必要があります。"
+msgstr "`quarkus-micrometer` または `quarkus-smallrye-metrics` エクステンションを使用している場合、 `quarkus-mongodb-client` はコネクションプールに関するメトリクスを提供することができます。この動作を有効にするには、まず `application.properties` の `quarkus.mongodb.tracing.enabled` プロパティーを `true` に設定し、pom.xml に `io.opentracing.contrib:opentracing-mongo-common` という依存関係を追加する必要があります（詳しくは link:opentracing#mongodb-client[OpenTracing - MongoDB client] セクションをご覧ください）。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:605
-#, fuzzy
 msgid "Read the link:opentracing[OpenTracing] guide, for how to configure OpenTracing and how to use the Jaeger tracer."
 msgstr "OpenTracingの設定方法やJaegerトレーサーの使用方法については、 link:opentracing[OpenTracing]ガイドをお読みください。"
 
@@ -1168,15 +1156,13 @@ msgstr "レガシークライアント"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:610
-#, fuzzy
 msgid "We don't include the legacy MongoDB client by default. It contains the now retired MongoDB Java API (DB, DBCollection,... )  and the `com.mongodb.MongoClient` that is now superseded by `com.mongodb.client.MongoClient`."
 msgstr "デフォルトではレガシーな MongoDB クライアントは含まれていません。今では引退した MongoDB Java API (DB, DBCollection, ... ) と `com.mongodb.MongoClient` が含まれていますが、今では `com.mongodb.client.MongoClient` に取って代わられています。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:612
-#, fuzzy
 msgid "If you want to use the legacy API, you need to add the following dependency to your `pom.xml`:"
-msgstr "レガシー API を使用したい場合は、以下の依存関係を `pom.xml` ."
+msgstr "レガシー API を使用したい場合は、以下の依存関係を `pom.xml` に追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/mongodb.adoc:619
@@ -1239,9 +1225,8 @@ msgstr "link:https://docs.mongodb.com/manual/core/security-client-side-encryptio
 
 #. type: delimited block =
 #: upstream/_guides/mongodb.adoc:651
-#, fuzzy
 msgid "If you encounter the following error when running your application in native mode: + `Failed to encode 'MyObject'. Encoding 'myVariable' errored with: Can't find a codec for class org.acme.MyVariable.` + This means that the `org.acme.MyVariable` class is not known to GraalVM, the remedy is to add the `@RegisterForReflection` annotation to your `MyVariable class`."
-msgstr "アプリケーションをネイティブモードで実行しているときに以下のエラーが発生した場合。 `@RegisterForReflection` `MyVariable class` + `Failed to encode 'MyObject'. Encoding 'myVariable' errored with: Can’t find a codec for class org.acme.MyVariable.` + これは、 `org.acme.MyVariable` クラスが GraalVM に知られていないことを意味します。"
+msgstr "アプリケーションをネイティブモードで実行しているときに以下のエラーが発生した場合。 `@RegisterForReflection` `MyVariable class` + `Failed to encode 'MyObject'. Encoding 'myVariable' errored with: Can’t find a codec for class org.acme.MyVariable.` + これは、 `org.acme.MyVariable` クラスが GraalVM に知られていないことを意味します。対処方法としては、 `MyVariable class` に `@RegisterForReflection` アノテーションを追加することです。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb.adoc:653
