Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/security-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-authorization.adoc.po
@@ -116,7 +116,7 @@ msgstr "パス、メソッドのマッチング"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:51
 msgid "Permission sets can also specify paths and methods as a comma separated list. If a path ends with `*` then it is considered to be a wildcard match and will match all sub paths, otherwise it is an exact match and will only match that specific path:"
-msgstr ""
+msgstr "パーミッションセットでは、パスとメソッドをカンマ区切りのリストで指定することもできます。パスの末尾が `*` である場合はワイルドカードマッチとみなされ、すべてのサブパスにマッチしますが、そうでない場合は完全一致となり、特定のパスにのみマッチします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-authorization.adoc:57
@@ -131,12 +131,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-authorization.adoc:59
 #, no-wrap
 msgid "Matching path but not method"
-msgstr ""
+msgstr "パスはマッチするがメソッドはマッチしない"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:63
 msgid "If a request would match one or more permission sets based on the path, but does not match any due to method requirements then the request is rejected."
-msgstr ""
+msgstr "リクエストがパスに基づいて1つ以上のパーミッションセットにマッチするが、 メソッドの要件によりマッチしない場合、そのリクエストは拒否されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:66
@@ -147,7 +147,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-authorization.adoc:67
 #, no-wrap
 msgid "Matching multiple paths: longest path wins"
-msgstr ""
+msgstr "複数のパスのマッチング:一番長いパスが勝ちます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:71
@@ -266,7 +266,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:144
 msgid "Given the above permission set, `GET /api/foo` would match both permission sets' paths, so would require both the `user` and `admin` roles."
-msgstr ""
+msgstr "上記のパーミッションセットを考えると、 `GET /api/foo` は両方のパーミッションセットのパスにマッチするので、 `user` と `admin` の両方のロールが必要になります。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/security-authorization.adoc:145
@@ -282,7 +282,7 @@ msgstr "RBAC Denyの動作を変更する2つの設定があります。"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:151
 msgid "`quarkus.security.jaxrs.deny-unannotated-endpoints=true|false` - if set to true, the access will be denied for all JAX-RS endpoints by default.  That is if the security annotations do not define the access control. Defaults to `false`."
-msgstr ""
+msgstr "`quarkus.security.jaxrs.deny-unannotated-endpoints=true|false` - true に設定すると、デフォルトではすべての JAX-RS エンドポイントに対してアクセスが拒否されます。つまり、セキュリティーアノテーションでアクセス制御が定義されていない場合です。デフォルトは `false` です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:154
@@ -379,27 +379,27 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:210
 msgid "This `/subject/secured` endpoint requires an authenticated user that has been granted the role \"Tester\" through the use of the `@RolesAllowed(\"Tester\")` annotation."
-msgstr ""
+msgstr "この `/subject/secured` エンドポイントは、 `@RolesAllowed(\"Tester\")` アノテーションを使用して\"Tester\"というロールを付与された認証済みユーザーが必要です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:211
 msgid "The endpoint obtains the user principal from the JAX-RS `SecurityContext`. This will be non-null for a secured endpoint."
-msgstr ""
+msgstr "エンドポイントは、JAX-RS `SecurityContext` からユーザー・プリンシパルを取得します。これは、保護されたエンドポイントの場合は非 null になります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:212
 msgid "The `/subject/unsecured` endpoint allows for unauthenticated access by specifying the `@PermitAll` annotation."
-msgstr ""
+msgstr "`/subject/unsecured` エンドポイントでは、 `@PermitAll` アノテーションを指定することで、認証されていないアクセスが可能になります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:213
 msgid "This call to obtain the user principal will return null if the caller is unauthenticated, non-null if the caller is authenticated."
-msgstr ""
+msgstr "ユーザープリンシパルを取得するためのこの呼び出しは、呼び出し元が認証されていない場合はnullを返し、呼び出し元が認証されている場合は非nullを返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:214
 msgid "The `/subject/denied` endpoint disallows any access regardless of whether the call is authenticated by specifying the `@DenyAll` annotation."
-msgstr ""
+msgstr "`/subject/denied` エンドポイントは、 `@DenyAll` アノテーションを指定することで、呼出が認証されているかどうかにかかわらず、あらゆるアクセスを禁止します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-authorization.adoc:215
