--- a/l10n/po/ja_JP/_versions/1.7/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/mongodb.adoc.po
@@ -974,17 +974,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:514
 msgid "Quarkus takes care of registering the `CodecProvider` for you."
-msgstr ""
+msgstr "Quarkusでは、 `CodecProvider` の登録を行います。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:516
 msgid "Finally, when getting the `MongoCollection` from the database you can use directly the `Fruit` class instead of the `Document` one, the codec will automatically map the `Document` to/from your `Fruit` class."
-msgstr ""
+msgstr "最後に、データベースから `MongoCollection` を取得するとき、 `Document` の代わりに `Fruit` クラスを直接使用することができます。コーデックは自動的に `Document` を `Fruit` クラスにマッピングします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:518
 msgid "Here is an example of using a `MongoCollection` with the `FruitCodec`."
-msgstr ""
+msgstr "これが、 `MongoCollection` を `FruitCodec` と使用する例です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mongodb.adoc:526
@@ -1055,17 +1055,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:565
 msgid "The link:http://mongodb.github.io/mongo-java-driver/3.12/bson/pojos[POJO Codec] provides a set of annotations that enable the customization of the way a POJO is mapped to a MongoDB collection and this codec is initialized automatically by Quarkus"
-msgstr ""
+msgstr "link:http://mongodb.github.io/mongo-java-driver/3.12/bson/pojos[POJO Codec] は、POJOをMongoDBコレクションにマッピングする方法をカスタマイズできるアノテーションのセットを提供しています。このCodecはQuarkusによって自動的に初期化されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:568
 msgid "One of these annotations is the `@BsonDiscriminator` annotation that allows to storage multiple Java types in a single MongoDB collection by adding a discriminator field inside the document. It can be useful when working with abstract types or interfaces."
-msgstr ""
+msgstr "このアノテーションのひとつに `@BsonDiscriminator` アノテーションがありますが、これは、ドキュメントの中にデリミタフィールドを追加することで、複数の Java 型をひとつの MongoDB コレクションに保存できるようにするものです。抽象的な型やインターフェイスを扱うときに便利です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:570
 msgid "Quarkus will automatically register all the classes annotated with `@BsonDiscriminator` with the POJO codec."
-msgstr ""
+msgstr "Quarkusは、 `@BsonDiscriminator` でアノテーションされたすべてのクラスをPOJOコーデックで自動的に登録します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/mongodb.adoc:571
@@ -1097,7 +1097,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:583
 msgid "This behavior can be disabled by setting the `quarkus.mongodb.health.enabled` property to `false` in your `application.properties`."
-msgstr ""
+msgstr "この動作は、 `application.properties` で `quarkus.mongodb.health.enabled` プロパティーを `false` に設定することで無効にできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/mongodb.adoc:584
@@ -1124,12 +1124,12 @@ msgstr "レガシークライアント"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:596
 msgid "We don't include the legacy MongoDB client by default. It contains the now retired MongoDB Java API (DB, DBCollection,... )  and the `com.mongodb.MongoClient` that is now superseded by `com.mongodb.client.MongoClient`."
-msgstr ""
+msgstr "デフォルトではレガシーな MongoDB クライアントは含まれていません。今では引退した MongoDB Java API (DB, DBCollection, ... ) と `com.mongodb.MongoClient` が含まれていますが、今では `com.mongodb.client.MongoClient` に取って代わられています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:598
 msgid "If you want to use the legacy API, you need to add the following dependency to your `pom.xml`:"
-msgstr ""
+msgstr "レガシー API を使用したい場合は、以下の依存関係を `pom.xml` に追加してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mongodb.adoc:605
@@ -1193,7 +1193,7 @@ msgstr "link:https://docs.mongodb.com/manual/core/security-client-side-encryptio
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/mongodb.adoc:637
 msgid "If you encounter the following error when running your application in native mode: + `Failed to encode 'MyObject'. Encoding 'myVariable' errored with: Can't find a codec for class org.acme.MyVariable.` + This means that the `org.acme.MyVariable` class is not known to GraalVM, the remedy is to add the `@RegisterForReflection` annotation to your `MyVariable class`."
-msgstr ""
+msgstr "アプリケーションをネイティブモードで実行しているときに以下のエラーが発生した場合。 `@RegisterForReflection` `MyVariable class` + `Failed to encode 'MyObject'. Encoding 'myVariable' errored with: Can’t find a codec for class org.acme.MyVariable.` + これは、 `org.acme.MyVariable` クラスが GraalVM に知られていないことを意味します。対処方法としては、 `MyVariable class` に `@RegisterForReflection` アノテーションを追加することです。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/mongodb.adoc:639
